fix: nav wrap, column names and paddings

--- a/style.css
+++ b/style.css
@@ -17,14 +17,9 @@ body {
 	color: #6d6c6c;
 }
 
-.body-container {
-	margin: 0 auto;
-	width: 1100px;
-}
-
 .container {
-	max-width: 1440px;
 	margin: 0 auto;
+	width: 80%;
 }
 
 .main-container {
@@ -32,43 +27,46 @@ body {
 	flex-wrap: wrap;
 }
 
-.column-right {
+.column-main {
+	display: flex;
+	flex-direction: column;
 	width: 60%;
-	padding: 40px;
+	padding: 40px 120px 40px 40px;
 	background-color: #f9f7f9;
 }
 
-.column-left {
+.column-aside {
 	width: 40%;
-	padding: 40px;
+	padding: 50px;
 	background-color: #eff0ee
 }
 
-@media (max-width: 768px) {
-	.column-right {
+@media (max-width: 1200px) {
+	.column-main {
 		width: 100%;
 	}
 }
 
-@media (max-width: 768px) {
-	.column-left {
+@media (max-width: 1200px) {
+	.column-aside {
 		width: 100%;
 	}
 }
 
-.header {
-	background-color: #dcdfda
+.header-container {
+	background-color: #dcdfda;
 }
 
 .nav-list {
 	display: flex;
+	flex-wrap: wrap;
 	justify-content: center;
 	align-items: center;
 	list-style: none;
 }
 
 .nav-link {
-	padding: 0 10px;
+	padding: 0 15px;
 	font-size: 14px;
 	line-height: 70px;
 	font-weight: 400;
@@ -106,13 +104,13 @@ body {
 .profile-container {
 	display: flex;
 	flex-direction: column;
-	align-items: flex-start;
+	align-items: center;
 }
 
 .profile-title {
-	padding-top: 40px;
+	padding-top: 30px;
 	font-size: 36px;
-	line-height: 52px;
+	line-height: 50px;
 	font-weight: 500;
 	text-transform: uppercase;
 	color: #758f79;
@@ -148,14 +146,11 @@ body {
 	color: #758f79;
 }
 
-.footer {
-	background-color: #dcdfda;
-}
-
 .footer-container {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	background-color: #dcdfda;
 }
 
 .footer-item {
